figuring out how to change the size of the pie dynamically

--- a/style.css
+++ b/style.css
@@ -1,31 +1,9 @@
 body {
-    text-align: center;
-  }
-  
-  svg {
-    border: 2px dashed #000;
-    height: 50px;
-    width: 50px;
-  }
-  
-  .first {
-    transform-origin: 50%;
-    /* 20 / 100 * 360 */
-    transform: rotate(-72deg)
-  }
-  
-  .second {
-    transform-origin: 50%;
-    transform: rotate(-252deg) /* CALCULATION PLUS PRIOR ELEMENT`S DEGREES */
-  }
-  
-  .third {
-    transform-origin: 50%;
-    /*transform: rotate(-90deg)*/
-    /* https://www.mathsisfun.com/data/pie-charts.html */
-    /* 30 / 100 * 360 */
-    /* percentage of slice / sum of all slices * 360 -> degreesof circle */
-    transform: rotate(-360deg) 
-  }
+  text-align: center;
+}
 
-  
+svg {
+  background: #f0e3ff;
+  height: 250px;
+  width: 250px;
+}
