--- a/style.css
+++ b/style.css
@@ -16,8 +16,22 @@ svg {
   */
 }
 
+.input-container {
+  background: red;
+  width: 500px;
+  height: 250px;
+  display: flex;
+}
+
 .top {
   background: green;
   width: 500px;
   height: 200px;
+}
+
+.field {
+  width: 50px;
+  height: 50px;
+  background: green;
+  margin: 5px;
 }
