--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
 
+:root {
+  --size: 500px;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -21,6 +25,8 @@ svg {
   height: 100px;
   width: 100px;
   */
+  height: var(--size);
+  width: var(--size)
 }
 
 .input-container {
