--- a/style.css
+++ b/style.css
@@ -65,3 +65,12 @@ input {
   margin: 5px;
   text-align: center;
 }
+
+.labels {
+  display: flex;
+}
+
+.label {
+  width: 50px;
+  height: 50px;
+}
