--- a/style.css
+++ b/style.css
@@ -13,10 +13,30 @@
 body {
   text-align: center;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+
   justify-content: center;
   font-family: 'Open Sans', sans-serif;
+}
+h1 {
+  background: green;
+}
+
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  background: red;
+  padding: 10px;
+}
+
+.chart-display {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+ 
+  background: blue;
+  padding: 10px;
 }
 
 svg {
@@ -35,6 +55,7 @@ svg {
   height: ;
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 .top {
