added a modal and styled some elements

--- a/style.css
+++ b/style.css
@@ -136,5 +136,19 @@ button {
   background: red;
   padding: 5px 60px;
   position: absolute;
-  display: none
+  display: none;
+
+  background-color: white;
+  border-radius:10px;
+  /* border: 1px solid rgba(0, 0, 0, 0.3); */
+  -webkit-box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3);
+  -moz-box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3);
+  -webkit-background-clip: padding-box;
+  -moz-background-clip: padding-box;
+  background-clip: padding-box;
+}
+
+.overlay {
+
 }
