--- a/style.css
+++ b/style.css
@@ -32,6 +32,8 @@ body {
   border: 1px solid #d1d1d1;
   position: relative;
   padding: 10px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.15);
 }
 
 h1 {
@@ -67,7 +69,8 @@ svg {
   width: 100px;
   */
   height: var(--size);
-  width: var(--size)
+  width: var(--size);
+
 }
 
 .input-container {
@@ -123,6 +126,7 @@ input:focus {
 .label {
   width: 50px;
   height: 50px;
+  margin: 5px;
 }
 
 .field-container {
