--- a/style.css
+++ b/style.css
@@ -60,6 +60,7 @@ h1 {
   /* background: blue; */
   padding: 10px 50px;
   border-left: 1px solid #DDDDDD;
+  position: relative;
 }
 
 svg {
@@ -108,7 +109,7 @@ input {
 }
 
 input:focus {
-  border: 1px solid red;
+  border: 1px solid green !important;
 }
 
 .field {
@@ -126,7 +127,7 @@ input:focus {
 .label {
   width: 50px;
   height: 50px;
-  margin: 5px;
+  margin: 0 5px;
 }
 
 .field-container {
@@ -149,6 +150,7 @@ button {
   padding: 5px 60px;
   position: absolute;
   display: none;
+  z-index: 2;
 
   background-color: white;
   border-radius:10px;
@@ -163,4 +165,26 @@ button {
 
 .overlay {
 
+}
+
+.chart-mode {
+
+
+
+}
+
+.doughnut-label {
+
+  display: inline-block;
+  vertical-align: middle;
+
+}
+
+input[type="checkbox"] {
+ 
+
+    vertical-align: middle;
+    position: relative;
+    top: 1px;
+    left: -3px;
 }
