--- a/style.css
+++ b/style.css
@@ -19,7 +19,6 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-
 }
 
 .app {
@@ -37,62 +36,46 @@ body {
 }
 
 h1 {
-  /* background: green; */
+
 }
 
 .wrapper {
   display: flex;
   flex-direction: column;
   align-items: center;
-
-  /* background: red; */
   padding: ;
-  /* border-right: 1px solid #CCCCCC; */
   height: 500px;
-
 }
 
 .chart-display {
   display: flex;
   flex-direction: column;
   align-items: center;
- 
-  /* background: blue; */
   padding: 10px 50px;
   border-left: 1px solid #DDDDDD;
   position: relative;
 }
 
 svg {
-  /*
-  background: ;
-  height: 100px;
-  width: 100px;
-  */
   height: var(--size);
   width: var(--size);
-
 }
 
 .input-container {
-  /* background: red; */
   width: 500px;
   height: ;
   display: flex;
   flex-direction: column;
   align-items: center;
   height: 300px;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 .top {
-  /* background: green; */
   width: 500px;
   height: 200px;
   display: none;
 }
-
-
 
 input {
   background: #fff;
@@ -132,7 +115,6 @@ input:focus {
 
 .field-container {
   display: flex;
-  /* background: green; */
 }
 
 button {
@@ -151,10 +133,8 @@ button {
   position: absolute;
   display: none;
   z-index: 2;
-
   background-color: white;
-  border-radius:10px;
-  /* border: 1px solid rgba(0, 0, 0, 0.3); */
+  border-radius: 10px;
   -webkit-box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3);
   -moz-box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3);
   box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3);
@@ -163,28 +143,28 @@ button {
   background-clip: padding-box;
 }
 
-.overlay {
+.overlay {}
 
-}
-
-.chart-mode {
-
-
-
-}
+.chart-mode {}
 
 .doughnut-label {
-
   display: inline-block;
   vertical-align: middle;
-
 }
 
 input[type="checkbox"] {
- 
+  vertical-align: middle;
+  position: relative;
+  top: 1px;
+  left: -3px;
+}
 
-    vertical-align: middle;
-    position: relative;
-    top: 1px;
-    left: -3px;
+.dimensions {
+  margin-top: 15px;
+}
+
+input[type="range"] {
+  border: none !important;
+  box-shadow: none;
+  margin-top: -2px;
 }
