--- a/style.css
+++ b/style.css
@@ -48,6 +48,8 @@ h1 {
 }
 
 .chart-display {
+  width: 500px;
+  height: 500px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -58,7 +60,7 @@ h1 {
 
 svg {
   height: var(--size);
-  width: var(--size);
+  width: var(--size);  
 }
 
 .input-container {
@@ -108,9 +110,10 @@ input:focus {
 }
 
 .label {
-  width: 50px;
-  height: 50px;
+  width: ;
+  height: ;
   margin: 0 5px;
+  border-radius: 3px;
 }
 
 .field-container {
@@ -152,12 +155,7 @@ button {
   vertical-align: middle;
 }
 
-input[type="checkbox"] {
-  vertical-align: middle;
-  position: relative;
-  top: 1px;
-  left: -3px;
-}
+
 
 .dimensions {
   margin-top: 15px;
@@ -167,4 +165,59 @@ input[type="range"] {
   border: none !important;
   box-shadow: none;
   margin-top: -2px;
+  background: orange;
+  width: 150px;
+  margin: 0 auto;
+}
+
+.expand {
+  background: ;
+  margin-right: ;
+  position: absolute;
+  left: -26px;
+  top: 5px;
+}
+
+.resize-section {
+  background: ;
+  width: ;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+
+.change-view {
+  width: 40px;
+  position: relative;
+  background: orange;
+  display: flex;
+  align-items: center;
+  justify-content: ;
+  text-align: right;
+  margin-bottom: 20px;
+}
+
+.view {
+  width: 18px;
+  position: absolute;
+  left: 0;
+}
+
+input[type="checkbox"] {
+  /* vertical-align: middle;
+  position: relative;
+  top: 1px;
+  left: -3px; */
+  position: absolute;
+  right: 0;
+  top: -11px;
+}
+
+.full {
+  display: block;
+}
+
+.not-full {
+  display: none;
 }
