--- a/style.css
+++ b/style.css
@@ -19,6 +19,8 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  background: #333;
+  
 }
 
 .app {
@@ -29,6 +31,7 @@ body {
   font-family: 'Open Sans', sans-serif;
   background: #F5F5F5;
   border: 1px solid #d1d1d1;
+  border-radius: 3px;
   position: relative;
   padding: 10px;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
@@ -176,7 +179,7 @@ button:hover{
 
 
 .dimensions {
-  margin-top: 15px;
+  margin-top: ;
 }
 
 input[type="range"] {
@@ -185,7 +188,7 @@ input[type="range"] {
   margin-top: -2px;
   background: orange;
   width: 150px;
-  margin: 0 auto;
+  margin: 5px auto;
 }
 
 .expand {
@@ -193,7 +196,7 @@ input[type="range"] {
   margin-right: ;
   position: absolute;
   left: -26px;
-  top: 5px;
+  top: 10px;
 }
 
 .resize-section {
@@ -207,13 +210,19 @@ input[type="range"] {
 
 .change-view {
   width: 40px;
-  position: relative;
+  position: absolute;
   background: orange;
-  display: flex;
+  /* display: flex; */
   align-items: center;
   justify-content: ;
   text-align: right;
   margin-bottom: 20px;
+
+  left: 45px;
+  bottom: 40px;
+
+  display: none;
+  
 }
 
 .view {
