--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ body {
   background: #F5F5F5;
   border: 1px solid #d1d1d1;
   position: relative;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+  border-bottom: 1px solid rgba(119, 97, 97, 0.2);
   box-shadow: 0 1px 5px rgba(0, 0, 0, 0.15);
 }
 
@@ -124,7 +124,7 @@ input[type="range"] {
   display: flex;
   flex-direction: column;
   align-items: center;
-  border-left: 1px solid #DDDDDD;
+  border-left: 1px solid #DDD;
   position: relative;
 }
 
