changed the CSS: made changes to the layout and removed unused code. I also added a conditional to make the change-view element visible when a chart is generated.

--- a/style.css
+++ b/style.css
@@ -134,7 +134,8 @@ svg {
 }
 
 .change-view {
-  display: flex;
+  /* display: flex; */
+  display: none;
   align-items: center;
   position: absolute;
   right: 0;
